# Lumi

./: .gitignore  .gitmodules  CMakeLists.txt  Prompt.md  README.md
.github/workflows/: build.yml
core/: CMakeLists.txt
core/include/: lumi_core.h
core/src/: api.cpp  base32.cpp  base32.h  hmac_sha.cpp  hmac_sha.h  hotp.cpp  migration_parser.cpp  ntp_client.cpp  qr_decoder.cpp  totp.cpp  totp.h  uuid.cpp  uuid.h  vault.cpp  vault.h
proto/: migration_payload.proto
scripts/: build.ps1  generate_proto.ps1
ui/: App.xaml  App.xaml.cs  Lumi.csproj  Lumi_d2n5ruk1_wpftmp.csproj  app.manifest
ui/Converters/: Converters.cs
ui/Core/: NativeInterop.cs  TotpAccount.cs  VaultManager.cs
ui/Services/: ClipboardService.cs  NtpSyncService.cs  ThemeService.cs
ui/Styles/: Colors.xaml  Controls.xaml  Typography.xaml
ui/ViewModels/: AccountItemViewModel.cs  AccountListViewModel.cs  BaseViewModel.cs
ui/Views/: AccountCard.xaml  AccountCard.xaml.cs  AddAccountDialog.xaml  AddAccountDialog.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs
